Restore ChatImpl conventions and document ordering